--- a/documentation/template.ejs
+++ b/documentation/template.ejs
@@ -1,96 +1,89 @@
 <? docfiles.forEach(function (doc) { ?>
 
     <? var moduleName = doc.filename.split('/').pop().split('.')[0] ?>
-        --- title:
-        <?= moduleName.split('-').join(' ') ?>
-            layout: "default" isPage: true ---
+    ---
+    title: <?= moduleName.split('-').join(' ') ?>
+    layout: "default"
+    isPage: true
+    ---
 
-            <!-- module desc -->
-            <? var moduleDoc = doc.javadoc.shift() ?>
-                <?= moduleDoc.description ?>
+    <? var moduleDoc = doc.javadoc.shift() ?>
+    <?= moduleDoc.description ?>
 
-                    <? var firstTag = moduleDoc.raw.tags[0] ?>
+    <? var firstTag = moduleDoc.raw.tags[0] ?>
 
 
-                        <? var configStart = 0 ?>
-                            <? doc.javadoc.forEach(function (block) { ?>
-                                <? if (!block.paramStr && (block.returnTags.length == 0)) { ?>
-                                    <? if (configStart === 0) { ?>
-                                        ## Configuration Options
+    <? var configStart = 0 ?>
+    <? doc.javadoc.forEach(function (block) { ?>
+        <? if (!block.paramStr && (block.returnTags.length == 0)) { ?>
+            <? if (configStart === 0) { ?>
+                ## Configuration Options
 
-                                        <? configStart = 1 ?>
-                                            <? } ?>
-                                                <? var configOption =  block.raw.code.split(':')[0] ?>
+                <? configStart = 1 ?>
+            <? } ?>
+            <? var configOption =  block.raw.code.split(':')[0] ?>
 
-                                                    ###
-                                                    <?= configOption ?>
+            ### <?= configOption ?>
 
-                                                        <? block.raw.tags.forEach(function (tag) { ?>
-                                                            <? if (tag.type === 'type') { ?>
-                                                                - *
-                                                                <?= tag.types[0] ?>*
-                                                                    <? } ?>
-                                                                        <? if (tag.type === 'see') { ?>
-                                                                            - See:
-                                                                            <?= tag.local ?>
-                                                                                <? } ?>
-                                                                                    <? }) ?>
+            <? block.raw.tags.forEach(function (tag) { ?>
+                <? if (tag.type === 'type') { ?>
+                    - *<?= tag.types[0] ?>* 
+                <? } ?>
+                <? if (tag.type === 'see') { ?>
+                    - See: <?= tag.local ?>
+                <? } ?>
+            <? }) ?>
 
-                                                                                        <?= block.description ?>
+            <?= block.description ?>
+            
+        <? } ?>
+    <? }) ?>
 
-                                                                                            <? } ?>
-                                                                                                <? }) ?>
+    <? var propertyStart = 0 ?>
+    <? doc.javadoc.forEach(function (block){ ?>
+        <? if ((block.returnTags.length == 1) && (block.paramStr.length == 0)) { ?>
+            <? if (propertyStart === 0) { ?>
+                ## Properties
+                <? propertyStart = 1 ?>
+            <? } ?>
+            <? var propertyName = block.raw.code.split('this.')[1] ?>
+            <? propertyName = propertyName.split(' = ')[0] ?>
 
-                                                                                                    <? var propertyStart = 0 ?>
-                                                                                                        <? doc.javadoc.forEach(function (block){ ?>
-                                                                                                            <? if ((block.returnTags.length == 1) && (block.paramStr.length == 0)) { ?>
-                                                                                                                <? if (propertyStart === 0) { ?>
-                                                                                                                    ## Properties
-                                                                                                                    <? propertyStart = 1 ?>
-                                                                                                                        <? } ?>
-                                                                                                                            <? var propertyName = block.raw.code.split('this.')[1] ?>
-                                                                                                                                <? propertyName = propertyName.split(' = ')[0] ?>
+            ### <?= propertyName ?>
+            <?= block.description ?>
+        <? } ?>
+    <? }) ?>
 
-                                                                                                                                    ###
-                                                                                                                                    <?= propertyName ?>
-                                                                                                                                        <?= block.description ?>
-                                                                                                                                            <? } ?>
-                                                                                                                                                <? }) ?>
+    <? var methodStart = 0 ?>
+    <? doc.javadoc.forEach(function (block) { ?>
+        <? if (block.paramStr) { ?>
+            <? if (methodStart === 0) { ?>
+                ## Methods
 
-                                                                                                                                                    <? var methodStart = 0 ?>
-                                                                                                                                                        <? doc.javadoc.forEach(function (block) { ?>
-                                                                                                                                                            <? if (block.paramStr) { ?>
-                                                                                                                                                                <? if (methodStart === 0) { ?>
-                                                                                                                                                                    ## Methods
+                <? methodStart = 1 ?>
+            <? } ?>
 
-                                                                                                                                                                    <? methodStart = 1 ?>
-                                                                                                                                                                        <? } ?>
+            <? var methodName = block.raw.code.split(':')[0] ?>
+            <? methodName = methodName.split(' =')[0] ?>
 
-                                                                                                                                                                            <? var methodName = block.raw.code.split(':')[0] ?>
-                                                                                                                                                                                <? methodName = methodName.split(' =')[0] ?>
+            ### <?= methodName ?>
+            <?= block.description ?>
 
-                                                                                                                                                                                    ###
-                                                                                                                                                                                    <?= methodName ?>
-                                                                                                                                                                                        <?= block.description ?>
+            <? block.paramTags.forEach(function (tag) { ?>
+                - `<?= tag.name ?>`: *<?= tag.joinedTypes ?>* <?= tag.description ?>
+            <? }) ?>
 
-                                                                                                                                                                                            <? block.paramTags.forEach(function (tag) { ?>
-                                                                                                                                                                                                - `
-                                                                                                                                                                                                <?= tag.name ?>`: *
-                                                                                                                                                                                                    <?= tag.joinedTypes ?>*
-                                                                                                                                                                                                        <?= tag.description ?>
-                                                                                                                                                                                                            <? }) ?>
-
-                                                                                                                                                                                                                <? var isExample = false ?>
-                                                                                                                                                                                                                    <!-- ```` -->
-                                                                                                                                                                                                                    <? block.raw.tags.forEach(function (tag) { ?>
-                                                                                                                                                                                                                        <? if (tag.type === 'example') { ?>
-                                                                                                                                                                                                                            <?  isExample = true ?>
-                                                                                                                                                                                                                                <? } ?>
-                                                                                                                                                                                                                                    <? if (isExample) { ?>
-                                                                                                                                                                                                                                        <?= tag.string ?>
-                                                                                                                                                                                                                                            <? } ?>
-                                                                                                                                                                                                                                                <? }) ?>
-                                                                                                                                                                                                                                                    <!-- ```` -->
-                                                                                                                                                                                                                                                    <? } ?>
-                                                                                                                                                                                                                                                        <? }) ?>
-                                                                                                                                                                                                                                                            <? }) ?>
+            <? var isExample = false ?>
+            <!-- ```` -->
+                <? block.raw.tags.forEach(function (tag) { ?>
+                  <? if (tag.type === 'example') { ?>
+                        <?  isExample = true ?>
+                  <? } ?>
+                  <? if (isExample) { ?>
+                        <?= tag.string ?>
+                  <? } ?>
+                <? }) ?>
+            <!-- ```` -->
+        <? } ?>
+    <? }) ?>
+<? }) ?>
