assume index page is home

--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -30,7 +30,7 @@
             The login action happens on the submit event for the form.
         -->
         <input type="hidden" id="fac-redirect-page" />
-        <form id="login" action="simulation.html">
+        <form id="login" action="index.html">
             <div>
                 <h4 class="text-center">Please Login to this Simulation</h4>
                 <hr>
